--- a/package.json
+++ b/package.json
@@ -71,8 +71,6 @@
     "stylelint-config-standard": "^20.0.0",
     "ts-jest": "^26.4.1",
     "utility-types": "^3.10.0",
-    "vue-class-component": "^7.2.6",
-    "vue-jest": "^3.0.4",
-    "vue-property-decorator": "^9.1.2"
+    "vue-jest": "^3.0.4"
   }
 }
