--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,6 @@
 {
-  "extends": ["config:base"]
+  "extends": [
+    "github>macchiitaka/renovate-config",
+    ":assignAndReview(macchiitaka)"
+  ]
 }
