--- a/package.json
+++ b/package.json
@@ -71,5 +71,15 @@
     "ts-jest": "26.5.3",
     "utility-types": "3.10.0",
     "vue-jest": "3.0.7"
+  },
+  "engines": {
+    "node": "14.x",
+    "npm": "7.x",
+    "yarn": "1.x"
+  },
+  "volta": {
+    "node": "14.16.0",
+    "npm": "7.1.0",
+    "yarn": "1.22.10"
   }
 }
