--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "postinstall": "is-ci || husky install;",
     "lint": "yarn lint:js && yarn lint:style",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
+    "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path .gitignore",
     "lint:type-check": "tsc -p . --noEmit",
     "start": "nuxt-ts start",
     "test": "jest --passWithNoTests"
