ci(test): remove windows os

--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "build": "nuxt-ts build",
     "dev": "nuxt-ts",
     "fmt": "run-p fmt:**",
-    "fmt:js": "eslint \"**/*.{vue,js}\" --fix --ignore-path .gitignore .",
+    "fmt:js": "eslint --ext .js,.vue --fix --ignore-path .gitignore .",
     "fmt:json": "prettier --write '**/*.json'",
     "fmt:md": "prettier --write '**/*.md'",
     "fmt:package-json": "sort-package-json",
-    "fmt:style": "stylelint \"**/*.{vue,css}\" --fix --ignore-path .gitignore",
+    "fmt:style": "stylelint **/*.{vue,css} --fix --ignore-path .gitignore",
     "fmt:yml": "prettier --write '**/*.yml'",
     "generate": "nuxt-ts generate",
     "postinstall": "is-ci || husky install;",
     "lint": "yarn lint:js && yarn lint:style",
-    "lint:js": "eslint \"**/*.{vue,js}\" --ignore-path .gitignore .",
-    "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path .gitignore",
+    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "lint:type-check": "tsc -p . --noEmit",
     "start": "nuxt-ts start",
     "test": "jest --passWithNoTests"
