--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,8 @@ jobs:
     name: Test
     strategy:
       matrix:
-        os: [ubuntu-18.04, windows-latest, macos-latest]
+        # os: [ubuntu-18.04, windows-latest, macos-latest]
+        os: [ubuntu-18.04, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
