--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nuxt build",
     "dev": "nuxt",
     "fmt": "run-p fmt:**",
-    "fmt:js": "eslint --ext .js,.vue --fix --ignore-path .gitignore .",
+    "fmt:js": "eslint --ext .js,.ts,.vue --fix --ignore-path .gitignore .",
     "fmt:json": "prettier --write '**/*.json'",
     "fmt:md": "prettier --write '**/*.md'",
     "fmt:package-json": "sort-package-json",
@@ -18,7 +18,7 @@
     "generate": "nuxt generate",
     "postinstall": "is-ci || husky install;",
     "lint": "yarn lint:js && yarn lint:style",
-    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint:js": "eslint --ext .js,.ts,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
     "lint:type-check": "tsc -p . --noEmit",
     "start": "nuxt start",
