--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "lint-staged": {
     "*.{css,vue}": "stylelint",
-    "*.{js,vue}": "eslint"
+    "*.{js,ts,vue}": "eslint"
   },
   "dependencies": {
     "axios": "0.21.1",
